# pyo3-with-cli-demo

./: .gitignore  Cargo.toml  README.md  pyproject.toml
string_cli/: Cargo.toml
string_cli/src/: main.rs
string_sum/: Cargo.toml  pyproject.toml
string_sum/src/: lib.rs
